# teams-bot

./: Dockerfile  README.md  app.py  bot.py  config.py  conn.py  pyproject.toml  requirements.txt
